<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="heading">My Nanodegree Apps!</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="media_streamer_toast">This button will launch my Spotify Streamer App</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo1_toast">This button will launch my Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="super_duo2_toast">This button will launch my Library App</string>
    <string name="ant_terminator">Build it Bigger</string>
    <string name="ant_terminator_toast">This button will launch my Build it Bigger App</string>
    <string name="materialize">XYZ Reader</string>
    <string name="materialize_toast">This button will launch my XYZ Reader App</string>
    <string name="capstone">Capstone: My own App</string>
    <string name="capstone_toast">This button will launch my Capstone App</string>

</resources>
