<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/heading"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_media_streamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="#FF9800"
        android:onClick="onClickMediaStreamer"
        android:text="@string/media_streamer" />

    <Button
        android:id="@+id/button_super_duo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_media_streamer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="#F08C35"
        android:onClick="onClickSuperDuo1"
        android:text="@string/super_duo1" />

    <Button
        android:id="@+id/button_super_duo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_super_duo1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="#F08C35"
        android:onClick="onClickSuperDuo2"
        android:text="@string/super_duo2" />

    <Button
        android:id="@+id/button_ant_terminator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_super_duo2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="#FF9800"
        android:onClick="onClickAntTerminator"
        android:text="@string/ant_terminator" />

    <Button
        android:id="@+id/button_materialize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_ant_terminator"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="#F08C35"
        android:onClick="onClickMaterialize"
        android:text="@string/materialize" />

    <Button
        android:id="@+id/button_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_materialize"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="#E91E63"
        android:onClick="onClickCapstone"
        android:text="@string/capstone"
        android:textColor="@android:color/white" />
</RelativeLayout>
